--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
 <body>
-  <p class="h1">Hockey Stats</p>
-  <p class="h2">API feed</p>
+  <p class="h1">nhl Standings</p>
+  <p id="test" class="h1"></p>
+  <div>
+    <p class="h2">Western Conference</p>
+    <div id="pacific">
+      <p class="h3">Pacific Division</p>
+    </div>
+    <div id="central">
+      <p class="h3">Central Division</p>
+    </div>
+  </div>
+  <div>
+    <p class="h2">Eastern Conference</p>
+    <div id="atlantic">
+      <p class="h3">Atlantic Division</p>
+    </div>
+    <div id="metropolitan">
+      <p class="h3">Metropolitan Division</p>
+    </div>
+  </div>
   <script src="default.js"></script>
 </body>
 </html>
