index now pulls rankings from json off server and parses into specific html fields #1

--- a/index.html
+++ b/index.html
@@ -5,24 +5,59 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
 <body>
-  <p class="h1">nhl Standings</p>
+  <p class="h1 text-center">nhl Standings</p>
   <p id="test" class="h1"></p>
-  <div>
-    <p class="h2">Western Conference</p>
-    <div id="pacific">
-      <p class="h3">Pacific Division</p>
-    </div>
-    <div id="central">
-      <p class="h3">Central Division</p>
-    </div>
-  </div>
-  <div>
-    <p class="h2">Eastern Conference</p>
-    <div id="atlantic">
-      <p class="h3">Atlantic Division</p>
-    </div>
-    <div id="metropolitan">
-      <p class="h3">Metropolitan Division</p>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-5 col-sm-offset-1">
+        <p class="h2 text-right">Western Conference</p>
+        <div id="pacific" class="text-right">
+          <p class="h3">Pacific Division</p>
+          <p id="pd1"></p>
+          <p id="pd2"></p>
+          <p id="pd3"></p>
+          <p id="pd4"></p>
+          <p id="pd5"></p>
+          <p id="pd6"></p>
+          <p id="pd7"></p>
+          <br>
+        </div>
+        <div id="central" class="text-right">
+          <p class="h3">Central Division</p>
+          <p id="cd1"></p>
+          <p id="cd2"></p>
+          <p id="cd3"></p>
+          <p id="cd4"></p>
+          <p id="cd5"></p>
+          <p id="cd6"></p>
+          <p id="cd7"></p>
+        </div>
+      </div>
+      <div class="col-sm-5">
+        <p class="h2">Eastern Conference</p>
+        <div id="atlantic">
+          <p class="h3">Atlantic Division</p>
+          <p id="ad1"></p>
+          <p id="ad2"></p>
+          <p id="ad3"></p>
+          <p id="ad4"></p>
+          <p id="ad5"></p>
+          <p id="ad66"></p>
+          <p id="ad7"></p>
+          <p id="ad8"></p>
+        </div>
+        <div id="metropolitan">
+          <p class="h3">Metropolitan Division</p>
+          <p id="md1"></p>
+          <p id="md2"></p>
+          <p id="md3"></p>
+          <p id="md4"></p>
+          <p id="md5"></p>
+          <p id="md6"></p>
+          <p id="md7"></p>
+          <p id="md8"></p>
+        </div>
+      </div>
     </div>
   </div>
   <script src="default.js"></script>
