--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <p id="test" class="h1"></p>
   <div class="container">
     <div class="row">
-      <div class="col-sm-5 col-sm-offset-1">
+      <div class="col-xs-5 col-xs-offset-1">
         <p class="h2 text-right">Western Conference</p>
         <div id="pacific" class="text-right">
           <p class="h3">Pacific Division</p>
@@ -33,7 +33,7 @@
           <p id="cd7"></p>
         </div>
       </div>
-      <div class="col-sm-5">
+      <div class="col-xs-5">
         <p class="h2">Eastern Conference</p>
         <div id="atlantic">
           <p class="h3">Atlantic Division</p>
