setup endpoint for standings data to be sent from server to front end #1

--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
-<!DOCTYPE <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <title>nhl</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" href="default.css">
 </head>
 <body>
   <p class="h1 text-center">nhl Standings</p>
   <p id="test" class="h1"></p>
   <div class="container">
     <div class="row">
-      <div class="col-xs-5 col-xs-offset-1">
+      <div class="col-xs-6">
         <p class="h2 text-right">Western Conference</p>
+      </div>
+      <div class="col-xs-6">
+        <p class="h2">Eastern Conference</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-5 col-xs-offset-1">
         <div id="pacific" class="text-right">
           <p class="h3">Pacific Division</p>
           <p id="pd1"></p>
@@ -34,17 +42,16 @@
         </div>
       </div>
       <div class="col-xs-5">
-        <p class="h2">Eastern Conference</p>
         <div id="atlantic">
           <p class="h3">Atlantic Division</p>
-          <p id="ad1"></p>
-          <p id="ad2"></p>
-          <p id="ad3"></p>
-          <p id="ad4"></p>
-          <p id="ad5"></p>
-          <p id="ad66"></p>
-          <p id="ad7"></p>
-          <p id="ad8"></p>
+          <p id="atld1"></p>
+          <p id="atld2"></p>
+          <p id="atld3"></p>
+          <p id="atld4"></p>
+          <p id="atld5"></p>
+          <p id="atld6"></p>
+          <p id="atld7"></p>
+          <p id="atld8"></p>
         </div>
         <div id="metropolitan">
           <p class="h3">Metropolitan Division</p>
