roster.html will use roster.js to request the team profile api documentation

--- a/index.html
+++ b/index.html
@@ -21,48 +21,48 @@
       <div class="col-xs-5 col-xs-offset-1">
         <div id="pacific" class="text-right">
           <p class="h3">Pacific Division</p>
-          <p id="pd1"></p>
-          <p id="pd2"></p>
-          <p id="pd3"></p>
-          <p id="pd4"></p>
-          <p id="pd5"></p>
-          <p id="pd6"></p>
-          <p id="pd7"></p>
+          <p id="pd1" data-team=""></p>
+          <p id="pd2" data-team=""></p>
+          <p id="pd3" data-team=""></p>
+          <p id="pd4" data-team=""></p>
+          <p id="pd5" data-team=""></p>
+          <p id="pd6" data-team=""></p>
+          <p id="pd7" data-team=""></p>
           <br>
         </div>
         <div id="central" class="text-right">
           <p class="h3">Central Division</p>
-          <p id="cd1"></p>
-          <p id="cd2"></p>
-          <p id="cd3"></p>
-          <p id="cd4"></p>
-          <p id="cd5"></p>
-          <p id="cd6"></p>
-          <p id="cd7"></p>
+          <p id="cd1" data-team=""></p>
+          <p id="cd2" data-team=""></p>
+          <p id="cd3" data-team=""></p>
+          <p id="cd4" data-team=""></p>
+          <p id="cd5" data-team=""></p>
+          <p id="cd6" data-team=""></p>
+          <p id="cd7" data-team=""></p>
         </div>
       </div>
       <div class="col-xs-5">
         <div id="atlantic">
           <p class="h3">Atlantic Division</p>
-          <p id="atld1"></p>
-          <p id="atld2"></p>
-          <p id="atld3"></p>
-          <p id="atld4"></p>
-          <p id="atld5"></p>
-          <p id="atld6"></p>
-          <p id="atld7"></p>
-          <p id="atld8"></p>
+          <p id="atld1" data-team=""></p>
+          <p id="atld2" data-team=""></p>
+          <p id="atld3" data-team=""></p>
+          <p id="atld4" data-team=""></p>
+          <p id="atld5" data-team=""></p>
+          <p id="atld6" data-team=""></p>
+          <p id="atld7" data-team=""></p>
+          <p id="atld8" data-team=""></p>
         </div>
         <div id="metropolitan">
           <p class="h3">Metropolitan Division</p>
-          <p id="md1"></p>
-          <p id="md2"></p>
-          <p id="md3"></p>
-          <p id="md4"></p>
-          <p id="md5"></p>
-          <p id="md6"></p>
-          <p id="md7"></p>
-          <p id="md8"></p>
+          <p id="md1" data-team=""></p>
+          <p id="md2" data-team=""></p>
+          <p id="md3" data-team=""></p>
+          <p id="md4" data-team=""></p>
+          <p id="md5" data-team=""></p>
+          <p id="md6" data-team=""></p>
+          <p id="md7" data-team=""></p>
+          <p id="md8" data-team=""></p>
         </div>
       </div>
     </div>
