roster.html displays full names of the players taken from api call

--- a/roster.html
+++ b/roster.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <p class="h1">Team Roster</p>
-
+  <div id="roster" class="h3"></div>
   <script src="roster.js"></script>
 </body>
 </html>
