rewrote display code to create nodes and elements and append it to divs

--- a/index.html
+++ b/index.html
@@ -19,41 +19,18 @@
     </div>
     <div class="row">
       <div class="col-xs-5 col-xs-offset-1">
-        <div id="pacific" class="text-right">
+        <div id="Pacific" class="text-right">
           <p class="h3">Pacific Division</p>
-          <p id="pd1" data-team=""></p>
-          <p id="pd2" data-team=""></p>
-          <p id="pd3" data-team=""></p>
-          <p id="pd4" data-team=""></p>
-          <p id="pd5" data-team=""></p>
-          <p id="pd6" data-team=""></p>
-          <p id="pd7" data-team=""></p>
-          <br>
         </div>
-        <div id="central" class="text-right">
+        <div id="Central" class="text-right">
           <p class="h3">Central Division</p>
-          <p id="cd1" data-team=""></p>
-          <p id="cd2" data-team=""></p>
-          <p id="cd3" data-team=""></p>
-          <p id="cd4" data-team=""></p>
-          <p id="cd5" data-team=""></p>
-          <p id="cd6" data-team=""></p>
-          <p id="cd7" data-team=""></p>
         </div>
       </div>
       <div class="col-xs-5">
-        <div id="atlantic">
+        <div id="Atlantic">
           <p class="h3">Atlantic Division</p>
-          <p id="atld1" data-team=""></p>
-          <p id="atld2" data-team=""></p>
-          <p id="atld3" data-team=""></p>
-          <p id="atld4" data-team=""></p>
-          <p id="atld5" data-team=""></p>
-          <p id="atld6" data-team=""></p>
-          <p id="atld7" data-team=""></p>
-          <p id="atld8" data-team=""></p>
         </div>
-        <div id="metropolitan">
+        <div id="Metropolitan">
           <p class="h3">Metropolitan Division</p>
           <p id="md1" data-team=""></p>
           <p id="md2" data-team=""></p>
