moving towards one page app, roster will now display directly below standings when a team is clicked #2

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 </head>
 <body>
   <p class="h1 text-center">nhl Standings</p>
-  <p id="test" class="h1"></p>
-  <div class="container">
+  <div id="rankings" class="container">
     <div class="row">
       <div class="col-xs-6">
         <p class="h2 text-right">Western Conference</p>
@@ -41,6 +40,13 @@
           <p id="md7" data-team=""></p>
           <p id="md8" data-team=""></p>
         </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div id="teamProfile">
+        
       </div>
     </div>
   </div>
