--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
   </div>
   <div class="container">
     <div class="row">
+      <p id="teamName" class="h1"></p>
+    </div>
+    <div class="row">
       <div id="teamProfile">
         
       </div>
