writing roster table from default.js

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <p class="h1 text-center">nhl Standings</p>
-  <div id="rankings" class="container">
+  <div class="container">
     <div class="row">
       <div class="col-xs-6">
         <p class="h2 text-right">Western Conference</p>
@@ -31,14 +31,6 @@
         </div>
         <div id="Metropolitan">
           <p class="h3">Metropolitan Division</p>
-          <p id="md1" data-team=""></p>
-          <p id="md2" data-team=""></p>
-          <p id="md3" data-team=""></p>
-          <p id="md4" data-team=""></p>
-          <p id="md5" data-team=""></p>
-          <p id="md6" data-team=""></p>
-          <p id="md7" data-team=""></p>
-          <p id="md8" data-team=""></p>
         </div>
       </div>
     </div>
