rankings is now written out in a table for standings to be inserted into #1

--- a/index.html
+++ b/index.html
@@ -9,28 +9,24 @@
   <p class="h1 text-center">nhl Standings</p>
   <div class="container">
     <div class="row">
-      <div class="col-xs-6">
-        <p class="h2 text-right">Western Conference</p>
-      </div>
-      <div class="col-xs-6">
-        <p class="h2">Eastern Conference</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-5 col-xs-offset-1">
-        <div id="Pacific" class="text-right">
-          <p class="h3">Pacific Division</p>
-        </div>
-        <div id="Central" class="text-right">
-          <p class="h3">Central Division</p>
+      <div class="col-sm-3">
+        <div id="Pacific" class="division">
+          <p class="h3 text-center">Pacific Division</p>
         </div>
       </div>
-      <div class="col-xs-5">
-        <div id="Atlantic">
-          <p class="h3">Atlantic Division</p>
+      <div class="col-sm-3">
+        <div id="Central" class="division">
+          <p class="h3 text-center">Central Division</p>
         </div>
-        <div id="Metropolitan">
-          <p class="h3">Metropolitan Division</p>
+      </div>
+      <div class="col-sm-3">
+        <div id="Atlantic" class="division">
+          <p class="h3 text-center">Atlantic Division</p>
+        </div>
+      </div>
+      <div class="col-sm-3">
+        <div id="Metropolitan" class="division">
+          <p class="h3 text-center">Metropolitan Division</p>
         </div>
       </div>
     </div>
