--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
   <p class="h1 text-center">nhl Standings</p>
+  <div id="background" class="container-fluid">
   <div class="container">
-    <div class="row">
+    <div id="rankings" class="row">
       <div class="col-lg-3 col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
         <div id="Pacific" class="division">
           <p class="h2 text-center">Pacific</p>
@@ -30,6 +31,7 @@
         </div>
       </div>
     </div>
+  </div>
   </div>
   <div class="container">
     <div class="row">
