--- a/index.html
+++ b/index.html
@@ -33,11 +33,9 @@
     </div>
   </div>
   </div>
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
-      <div id="teamProfile">
-        
-      </div>
+      <div id="teamProfile" class="col-sm-10 col-sm-offset-1"></div>
     </div>
   </div>
   <script src="default.js"></script>
