--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
   </div>
   </div>
-  <div class="container-fluid">
+  <div class="container">
     <div class="row">
       <div id="teamProfile" class="col-sm-10 col-sm-offset-1"></div>
     </div>
