--- a/index.html
+++ b/index.html
@@ -33,9 +33,14 @@
     </div>
   </div>
   </div>
-  <div class="container">
+  <div id="roster" class="container">
     <div class="row">
       <div id="teamProfile" class="col-sm-10 col-sm-offset-1"></div>
+    </div>
+  </div>
+  <div id="player" class="container">
+    <div class="row">
+      <div id="playerProfile" class="col-sm-10 col-sm-offset-1"></div>
     </div>
   </div>
   <script src="default.js"></script>
