--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
   <div id="background" class="container-fluid">
   <div class="container">
     <div class="row">
-      <div class="col-lg-3 col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+      <div class="col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
         <div id="Pacific" class="division">
           <p class="h3 text-center">Pacific</p>
         </div>
       </div>
-      <div class="col-lg-3 col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+      <div class="col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
         <div id="Central" class="division">
           <p class="h3 text-center">Central</p>
         </div>
       </div>
-      <div class="col-lg-3 col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+      <div class="col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
         <div id="Atlantic" class="division">
           <p class="h3 text-center">Atlantic</p>
         </div>
       </div>
-      <div class="col-lg-3 col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+      <div class="col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
         <div id="Metropolitan" class="division">
           <p class="h3 text-center">Metropolitan</p>
         </div>
