--- a/index.html
+++ b/index.html
@@ -11,24 +11,16 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-        <div id="Pacific" class="division">
-          <p class="h3 text-center">Pacific</p>
-        </div>
+        <div id="Pacific" class="division"></div>
       </div>
       <div class="col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-        <div id="Central" class="division">
-          <p class="h3 text-center">Central</p>
-        </div>
+        <div id="Central" class="division"></div>
       </div>
       <div class="col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-        <div id="Atlantic" class="division">
-          <p class="h3 text-center">Atlantic</p>
-        </div>
+        <div id="Atlantic" class="division"></div>
       </div>
       <div class="col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-        <div id="Metropolitan" class="division">
-          <p class="h3 text-center">Metropolitan</p>
-        </div>
+        <div id="Metropolitan" class="division"></div>
       </div>
     </div>
   </div>
