adding league leader section

--- a/index.html
+++ b/index.html
@@ -8,22 +8,27 @@
 <body>
   <p class="h1 text-center">nhl Standings</p>
   <div id="background" class="container-fluid">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-        <div id="Pacific" class="division"></div>
-      </div>
-      <div class="col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-        <div id="Central" class="division"></div>
-      </div>
-      <div class="col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-        <div id="Atlantic" class="division"></div>
-      </div>
-      <div class="col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-        <div id="Metropolitan" class="division"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+          <div id="Pacific" class="division"></div>
+        </div>
+        <div class="col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+          <div id="Central" class="division"></div>
+        </div>
+        <div class="col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+          <div id="Atlantic" class="division"></div>
+        </div>
+        <div class="col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+          <div id="Metropolitan" class="division"></div>
+        </div>
       </div>
     </div>
   </div>
+  <div class="container">
+    <div id="leaders" class="row">
+
+    </div>
   </div>
   <div id="roster" class="container">
     <div class="row">
