top goals and assists now load along with the player's team logo #4

--- a/index.html
+++ b/index.html
@@ -26,8 +26,13 @@
     </div>
   </div>
   <div class="container">
-    <div id="leaders" class="row">
-
+    <div id="leaders" class="row col-sm-12 text-center">
+      <div id="goals" class="col-sm-6">
+        <p class="h3">Top 10 Goals</p>
+      </div>
+      <div id="assists" class="col-sm-6">
+        <p class="h3">Top 10 Assists</p>
+      </div>
     </div>
   </div>
   <div id="roster" class="container">
