leaders picture now changes to the player's team logo when you hover over the player #4

--- a/index.html
+++ b/index.html
@@ -26,12 +26,16 @@
     </div>
   </div>
   <div class="container">
-    <div id="leaders" class="row col-sm-12 text-center">
-      <div id="goals" class="col-sm-6">
-        <p class="h3">Top 10 Goals</p>
+    <div id="leaders" class="row">
+      <div class="col-sm-6">
+        <p class="h3 text-center">Top 10 Goals Scored</p>
+        <div id="goals-img" class="col-sm-6"></div>
+        <div id="goals" class="col-sm-6"></div>
       </div>
-      <div id="assists" class="col-sm-6">
-        <p class="h3">Top 10 Assists</p>
+      <div class="col-sm-6">
+        <p class="h3 text-center">Top 10 Assists</p>
+        <div id="assists-img" class="col-sm-6"></div>
+        <div id="assists" class="col-sm-6"></div>
       </div>
     </div>
   </div>
