--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
   </div>
   <div class="container">
     <div id="leaders" class="row">
-      <div class="col-sm-6">
-        <p class="h3 text-center">Top 10 Goals Scored</p>
+      <div class="col-xs-12 col-md-4">
+        <p class="h3 text-center leader-title">Top 10 Goals Scored</p>
         <div id="goals-img" class="col-sm-6"></div>
-        <div id="goals" class="col-sm-6"></div>
+        <div id="goals" class="col-sm-6 h5"></div>
       </div>
-      <div class="col-sm-6">
-        <p class="h3 text-center">Top 10 Assists</p>
+      <div class="col-xs-12 col-md-4">
+        <p class="h3 text-center leader-title">Top 10 Assists</p>
         <div id="assists-img" class="col-sm-6"></div>
-        <div id="assists" class="col-sm-6"></div>
+        <div id="assists" class="col-sm-6 h5"></div>
       </div>
     </div>
   </div>
