--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
         <div id="assists-img" class="col-sm-6"></div>
         <div id="assists" class="col-sm-6 h5"></div>
       </div>
+      <div class="col-xs-12 col-md-4">
+        <p class="h3 text-center leader-title">Top 10 Points</p>
+        <div id="points-img" class="col-sm-6"></div>
+        <div id="points" class="col-sm-6 h5"></div>
+      </div>
     </div>
   </div>
   <div id="roster" class="container">
