--- a/index.html
+++ b/index.html
@@ -7,7 +7,27 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
-  <p class="h1 text-center">nhl Standings <i id="spinner" class="fa fa-spinner fa-spin"></i></p>
+  <div id="nav">
+  <p class="h1 text-center"><img src="images/nhl-logo.svg"> onDemand <i id="spinner" class="fa fa-spinner fa-spin"></i></p>
+  <div class="container hidden">
+    <div id="leaders" class="row">
+      <div id="leaders-goals" class="col-xs-12 col-md-4">
+        <p class="h3 text-center leader-title">Top 5 Goals Scored</p>
+        <div id="goals-img" class="col-sm-6"></div>
+        <div id="goals" class="col-sm-6 text-right"></div>
+      </div>
+      <div id="leaders-assists" class="col-xs-12 col-md-4">
+        <p class="h3 text-center leader-title">Top 5 Assists</p>
+        <div id="assists-img" class="col-sm-6"></div>
+        <div id="assists" class="col-sm-6 text-right"></div>
+      </div>
+      <div id="leaders-points" class="col-xs-12 col-md-4">
+        <p class="h3 text-center leader-title">Top 5 Points</p>
+        <div id="points-img" class="col-sm-6"></div>
+        <div id="points" class="col-sm-6 text-right"></div>
+      </div>
+    </div>
+  </div>
   <div id="background" class="container-fluid">
     <div class="container hidden">
       <div class="row">
@@ -26,25 +46,6 @@
       </div>
     </div>
   </div>
-  <div class="container hidden">
-    <div id="leaders" class="row">
-      <div class="col-xs-12 col-md-4">
-        <p class="h3 text-center leader-title">Top 10 Goals Scored</p>
-        <div id="goals-img" class="col-sm-6"></div>
-        <div id="goals" class="col-sm-6 h5"></div>
-      </div>
-      <div class="col-xs-12 col-md-4">
-        <p class="h3 text-center leader-title">Top 10 Assists</p>
-        <div id="assists-img" class="col-sm-6"></div>
-        <div id="assists" class="col-sm-6 h5"></div>
-      </div>
-      <div class="col-xs-12 col-md-4">
-        <p class="h3 text-center leader-title">Top 10 Points</p>
-        <div id="points-img" class="col-sm-6"></div>
-        <div id="points" class="col-sm-6 h5"></div>
-      </div>
-    </div>
-  </div>
   <div id="roster" class="container hidden">
     <div class="row">
       <div id="teamProfile" class="col-sm-10 col-sm-offset-1"></div>
@@ -54,6 +55,7 @@
     <div class="row">
       <div id="playerProfile" class="col-sm-10 col-sm-offset-1"></div>
     </div>
+  </div>
   </div>
   <script src="default.js"></script>
 </body>
