--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
   <p class="h1 text-center"><img src="images/nhl-logo.svg"> onDemand <i id="spinner" class="fa fa-spinner fa-spin"></i></p>
   <div class="container hidden">
     <div id="leaders" class="row">
-      <div id="leaders-goals" class="col-xs-12 col-md-4">
+      <div id="leaders-goals" class="col-xs-8 col-xs-offset-2 col-md-6 col-md-offset-0 col-lg-4">
         <p class="h3 text-center leader-title">Top 5 Goals Scored</p>
-        <div id="goals-img" class="col-sm-6"></div>
-        <div id="goals" class="col-sm-6 text-right"></div>
+        <div id="goals-img" class="col-xs-6"></div>
+        <div id="goals" class="col-xs-6 text-right"></div>
       </div>
-      <div id="leaders-assists" class="col-xs-12 col-md-4">
+      <div id="leaders-assists" class="col-xs-8 col-xs-offset-2 col-md-6 col-md-offset-0 col-lg-4">
         <p class="h3 text-center leader-title">Top 5 Assists</p>
-        <div id="assists-img" class="col-sm-6"></div>
-        <div id="assists" class="col-sm-6 text-right"></div>
+        <div id="assists-img" class="col-xs-6"></div>
+        <div id="assists" class="col-xs-6 text-right"></div>
       </div>
-      <div id="leaders-points" class="col-xs-12 col-md-4">
+      <div id="leaders-points" class="col-xs-8 col-xs-offset-2 col-md-6 col-md-offset-0 col-lg-4">
         <p class="h3 text-center leader-title">Top 5 Points</p>
-        <div id="points-img" class="col-sm-6"></div>
-        <div id="points" class="col-sm-6 text-right"></div>
+        <div id="points-img" class="col-xs-6"></div>
+        <div id="points" class="col-xs-6 text-right"></div>
       </div>
     </div>
   </div>
